--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <nav class="navbar is-info navbar-center" role="navigation" aria-label="main navigation">
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start" style="flex-grow: 1; justify-content: center">
-      <a class="navbar-item">
-        Teachers
+      <a class="navbar-item" routerLink="/experts">
+        Experts
       </a>
 
-      <a class="navbar-item">
+      <a class="navbar-item" routerLink="/questions">
         Questions
       </a>
     </div>
