--- a/src/app/expert/experts.component.html
+++ b/src/app/expert/experts.component.html
@@ -1,4 +1,17 @@
-<div *ngFor="let expert of experts | async">
-  {{expert.name}}
-  {{expert.specialization}}
+<div class="container ">
+  <div class="columns is-tablet mt-2 mx-2">
+    <div class="column is-one-third-desktop is-one-third-tablet p-0 m-3">
+      <app-expert-list-item
+        *ngFor="let expert of experts | async"
+        [expert]="expert"
+        (click)="selectedExpert = expert"
+      ></app-expert-list-item>
+    </div>
+    <div class="column card has-background-primary-light m-3 stick-to-screen">
+      <app-expert-profile
+        *ngIf="selectedExpert"
+        [expert]="selectedExpert"
+      ></app-expert-profile>
+    </div>
+  </div>
 </div>
