--- a/src/app/teacher-list-item/teacher-list-item.component.html
+++ b/src/app/teacher-list-item/teacher-list-item.component.html
@@ -6,10 +6,10 @@
       <p
         class="title is-size-5 has-text-weight-bold has-text-word-overflow-wrapped"
       >
-        {{ expert.name }}
+        {{ teacher.name }}
       </p>
       <p class="subtitle is-6 has-text-word-overflow-wrapped mb-1">
-        {{ expert.specialization }}
+        {{ teacher.specialization }}
       </p>
     </div>
   </div>
