--- a/src/app/teacher-profile/teacher-profile.component.html
+++ b/src/app/teacher-profile/teacher-profile.component.html
@@ -1,7 +1,7 @@
 <div class="container is-max-desktop">
   <div class="card-content">
-    <p class="title">{{ expert.name }}</p>
-    <p class="is-size-5">Knowledge: {{ expert.specialization }}</p>
+    <p class="title">{{ teacher.name }}</p>
+    <p class="is-size-5">Knowledge: {{ teacher.specialization }}</p>
     <p class="is-size-5">
       Price per question:
       {{ 3 | currency }}
