remove non necessary fields

--- a/src/app/teacher-list-item/teacher-list-item.component.html
+++ b/src/app/teacher-list-item/teacher-list-item.component.html
@@ -9,7 +9,7 @@
         {{ teacher.name }}
       </p>
       <p class="subtitle is-6 has-text-word-overflow-wrapped mb-1">
-        {{ teacher.specialization }}
+        {{ teacher.subjects }}
       </p>
     </div>
   </div>
