--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,8 +1,8 @@
 <nav class="navbar is-info navbar-center" role="navigation" aria-label="main navigation">
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start" style="flex-grow: 1; justify-content: center">
-      <a class="navbar-item" routerLink="/experts">
-        Experts
+      <a class="navbar-item" routerLink="/teachers">
+        Teachers
       </a>
 
       <a class="navbar-item" routerLink="/questions">
