--- a/src/app/teacher/teacher-browser.component.html
+++ b/src/app/teacher/teacher-browser.component.html
@@ -1,17 +1,23 @@
-<div class="container ">
-  <div class="columns is-tablet mt-2 mx-2">
-    <div class="column is-one-third-desktop is-one-third-tablet p-0 m-3">
-      <app-teacher-list-item
-        *ngFor="let teacher of teachers | async"
-        [teacher]="teacher"
-        (click)="selectedTeacher = teacher"
-      ></app-teacher-list-item>
-    </div>
-    <div class="column card has-background-link-light m-3 stick-to-screen">
-      <app-teacher-profile
-        *ngIf="selectedTeacher"
-        [teacher]="selectedTeacher"
-      ></app-teacher-profile>
+<div *ngIf="teachers$ | async as teachers">
+  <div *ngIf="teachers.length > 0; else empty" class="container">
+    <div class="columns is-tablet mt-2 mx-2">
+      <div class="column is-one-third-desktop is-one-third-tablet p-0 m-3">
+        <app-teacher-list-item
+          *ngFor="let teacher of teachers"
+          [teacher]="teacher"
+          (click)="selectedTeacher = teacher"
+        ></app-teacher-list-item>
+      </div>
+      <div class="column card has-background-link-light m-3 stick-to-screen">
+        <app-teacher-profile
+          *ngIf="selectedTeacher"
+          [teacher]="selectedTeacher"
+        ></app-teacher-profile>
+      </div>
     </div>
   </div>
 </div>
+
+<ng-template #empty class="help subtitle is-5 is-info">
+  There are no teachers available at the moment.
+</ng-template>
