--- a/src/app/sign-in/sign-in.component.html
+++ b/src/app/sign-in/sign-in.component.html
@@ -1,1 +1,42 @@
-<p *ngIf="render">sign-in works!</p>
+<div class="modal" [ngClass]="{ 'is-active': showDialog }">
+  <div class="modal-background"></div>
+  <div class="modal-card">
+    <header class="modal-card-head">
+      <p class="modal-card-title">Login</p>
+      <button
+        class="delete"
+        type="button"
+        (click)="hideForm()"
+        aria-label="close"
+      ></button>
+    </header>
+    <section class="modal-card-body">
+      <div class="field">
+        <label class="label">Email</label>
+        <div class="control">
+          <input
+            class="input"
+            type="email"
+            placeholder="Enter your Email here"
+          />
+        </div>
+      </div>
+
+      <div class="field">
+        <label class="label">Password</label>
+        <div class="control">
+          <input
+            class="input"
+            type="password"
+            placeholder="Enter your Password here"
+          />
+        </div>
+      </div>
+    </section>
+
+    <footer class="modal-card-foot">
+      <button (click)="loginUser()" class="button is-success">Submit</button>
+      <button class="button" type="button" (click)="hideForm()">Cancel</button>
+    </footer>
+  </div>
+</div>
